# reward-preprocessing

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  pyproject.toml  setup.cfg
.circleci/: config.yml
ci/: code_checks.sh  docker.sh  docker_setup.sh  docker_test.sh  format_code.sh  setup.sh
scripts/: create_densities.sh  create_rollouts.sh  interpret.sh  plot.sh  plot_gridworld.sh  plot_mountain_car.sh  preprocess.sh  preprocess_gridworld.sh  preprocess_mountain_car.sh  reward_training.sh  rollouts.sh  start_docker.sh  train.sh  train_all.sh  train_gridworld.sh  train_mountain_car.sh
src/reward_preprocessing/: create_densities.py  create_models.py  create_rollouts.py  data.py  datasets.py  env.py  gridworld_plot.py  interpret.py  models.py  optimize_continuous.py  optimize_tabular.py  plot_heatmaps.py  plot_reward_curves.py  policy.py  preprocess.py  tabular_reward_net.py  train_agent.py  train_drlhp.py  train_reward_model.py  train_rl.py  transition.py  types.py  utils.py  wandb_logger.py
src/reward_preprocessing/env/: __init__.py  env_ingredient.py  maze.py  mountain_car.py  mountain_car_shaped.py  sparse.py
src/reward_preprocessing/interp/: __init__.py  fixed_processor.py  gridworld_plot.py  noise.py  optimize.py  optimize_tabular.py  plot_heatmaps.py  plot_rewards.py  sparsify.py  value_net_shaping.py  visualize_rollout.py  visualize_transitions.py
src/reward_preprocessing/models/: __init__.py  mlp_model.py  reward_model.py
src/reward_preprocessing/preprocessing/: __init__.py  fixed_potentials.py  potential_shaping.py  preprocessor.py
tests/: conftest.py  test_agent_training.py  test_determinism.py  test_envs.py  test_maze.py  test_potential_shaping.py  test_training_pipeline.py  test_transition.py
