[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
known_first_party = "reward_preprocessing"
known_third_party = "wandb"
multi_line_output = 3
force_sort_within_sections = true
skip = [".pytype", ".venv"]
profile = "black"

[tool.black]
target-version = ["py39"]