[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
known_first_party = "reward_preprocessing"
known_third_party = "wandb"
multi_line_output = 3
force_sort_within_sections = true
skip = [".pytype", ".venv"]
profile = "black"

[tool.black]
target-version = ["py37"]

[tool.poetry]
name = "reward_preprocessing"
version = "0.0.1"
description = "Reward preprocessing"
authors = ["Erik Jenner", "Adam Gleave"]

[tool.poetry.dependencies]
python = "=3.7.11"
torch = "^1.9.0"
stable-baselines3 = "^1.1.0"
sacred = "^0.8.2"
numpy = "^1.21.2"
gym = "^0.19.0"
tqdm = "^4.62.2"
wandb = "^0.12.1"
sb3-contrib = "^1.1.0"
seals = "^0.1.1"
mazelab = {git = "https://github.com/ejnnr/mazelab"}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.8b0"
flake8 = "^3.9.2"
pytype = "^2021.8.24"
flake8-isort = "^4.0.0"
