[metadata]
name = reward_preprocessing
version = 0.0.1
author = "Erik Jenner and Adam Gleave"
author_email = "erik.jenner99@gmail.com"

[options]
packages = find:
package_dir =
    =src
install_requires =
    torch
    stable-baselines3
    sacred
    numpy
    gym
    gym-minigrid

[options.packages.find]
where = src

[flake8]
docstring-convention=google
ignore = E203, W503
max-line-length = 88

[pytype]
inputs =
    src/
    tests/
    setup.py
python_version = 3.9

[tool:pytest]
markers =
    expensive: mark a test as expensive (deselect with '-m "not expensive"')