[metadata]
name = reward_preprocessing
version = 0.0.1
author = "Erik Jenner and Adam Gleave"
author_email = "erik.jenner99@gmail.com"

[options]
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[flake8]
docstring-convention=google
ignore = E203, W503
max-line-length = 88

[pytype]
inputs =
    src/
    tests/
    setup.py
python_version = 3.7

[tool:pytest]
markers =
    expensive: mark a test as expensive (deselect with '-m "not expensive"')
filterwarnings =
    ignore:`np.int` is a deprecated alias for the builtin `int`:DeprecationWarning
    ignore:`np.float` is a deprecated alias for the builtin `float`:DeprecationWarning
    ignore:`np.object` is a deprecated alias for the builtin `object`:DeprecationWarning
    ignore:`np.bool` is a deprecated alias for the builtin `bool`:DeprecationWarning
    ignore:Using or importing the ABCs from 'collections' instead of from 'collections.abc' is deprecated:DeprecationWarning
    ignore:Call to deprecated create function Descriptor():DeprecationWarning
